--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "react-course",
   "version": "0.1.0",
+  "homepage": "https://geek-of-automation.onrender.com",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.4",
