Adding homepageproperty to package.json

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-course",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://geek-of-automation.onrender.com",
   "dependencies": {
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
